[package]
name = "rkd-high-frequency-trading"
version = "0.1.0"
edition = "2024"

[dependencies]
# Configuração
config = "0.14"

# Web framework
actix-web = "4.4"

# Serialização / desserialização
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Requisições HTTP
reqwest = { version = "0.11", features = ["json"] }

# Runtime assíncrono
tokio = { version = "1", features = ["full"] }

# Estado global thread-safe (para blockchain)
once_cell = "1.18"

# Hashing (para integridade da blockchain)
sha2 = "0.10"
hex = "0.4"
